[project]
name = "ai-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.120.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]
